--- a/index.html
+++ b/index.html
@@ -68,259 +68,6 @@ border: solid 2px;
 }
 
 </style>
-
-<datalist id="colorEye">
-  <option value="Brown">
-  <option value="Hazel">
-  <option value="Blue">
-  <option value="Green">
-</datalist>
-<datalist id="colorHair">
-  <option value="Brown">
-  <option value="Black">
-  <option value="Blonde">
-  <option value="Red">
-</datalist>
-<datalist id="colorVehicle">
-  <option value="Black">
-  <option value="Gray">
-  <option value="Silver">
-  <option value="White">
-  <option value="Red">
-  <option value="Blue">
-  <option value="Green">
-</datalist>
-<datalist id="MOS">
-  <option value="35F">
-  <option value="35G">
-  <option value="35L">
-  <option value="35M">
-  <option value="35T">
-  <option value="09L">
-</datalist>
-<datalist id="ABNRASP">
-  <option value="Contract">
-  <option value="Volunteer">
-  <option value="No">
-</datalist>
-<datalist id="DLI">
-  <option value="Pass">
-  <option value="Fail">
-  <option value="No">
-</datalist>
-<datalist id="YN">
-  <option value="Yes">
-  <option value="No">
-</datalist>
-<datalist id="Relationship">
-  <option value="Spouse">
-  <option value="Child">
-  <option value="Father">
-  <option value="Mother">
-  <option value="Step-Father">
-  <option value="Step-Mother">
-  <option value="Brother">
-  <option value="Sister">
-  <option value="Grandfather">
-  <option value="Grandmother">
-  <option value="Grandparent">
-  <option value="Uncle">
-  <option value="Aunt">
-  <option value="Cousin">
-  <option value="Friend">
-  <option value="Father-in-law">
-  <option value="Mother-in-law">
-  <option value="Brother-in-law">
-  <option value="Sister-in-law">
-  <option value="Fiance">
-  <option value="Boyfriend">
-  <option value="Girlfriend">
-</datalist>
-
-<datalist id="COVIDVacManu">
-  <option value="Moderna">
-  <option value="Pfizer">
-  <option value="Johnson & Johnson">
-</datalist>
-
-<datalist id="Religion">
-  <option value="None">
-  <option value="Christian">
-  <option value="Catholic">
-  <option value="Adventist">
-  <option value="Agnostic">
-  <option value="Atheist">
-  <option value="Baptist">
-  <option value="Buddhist">
-  <option value="Child of God">
-  <option value="Episcopal">
-  <option value="Hindu">
-  <option value="Islam">
-  <option value="Jewish">
-  <option value="Judaism">
-  <option value="LDS">
-  <option value="Lutheran">
-  <option value="Methodist">
-  <option value="Mormon">
-  <option value="Muslim">
-  <option value="Orthodox">
-  <option value="Eastern Orthodox">
-  <option value="Greek Orthodox">
-  <option value="Judaism Orthodox">
-  <option value="Pagan">
-  <option value="Pentecostal">
-  <option value="Presbyterian">
-  <option value="Protestant">
-  <option value="Wiccan">
-</datalist>
-
-<datalist id="Allergies">
-  <option value="None">
-  <option value="Amoxicillin">
-  <option value="Bees">
-  <option value="Eggs">
-  <option value="Fish">
-  <option value="Grass">
-  <option value="Latex">
-  <option value="Milk">
-  <option value="Mold">
-  <option value="Peanuts">
-  <option value="Penicillin">
-  <option value="Pollen">
-  <option value="Sesame">
-  <option value="Shellfish">
-  <option value="Soy">
-  <option value="Sulfa drugs">
-  <option value="Tree nut">
-  <option value="Turmeric">
-  <option value="Wasps">
-  <option value="Wheat">
-</datalist>
-
-<datalist id="MealPref">
-  <option value="No Preference">
-  <option value="Vegetarian">
-  <option value="Vegan">
-  <option value="No pork">
-  <option value="No red meat">
-  <option value="Pescatarian">
-  <option value="Kosher">
-  <option value="Halal">
-</datalist>
-
-<datalist id="POVType">
-  <option value="Coupe">
-  <option value="Hatchback">
-  <option value="Coupe">
-  <option value="Mini-Van">
-  <option value="Pickup">
-  <option value="Sedan">
-  <option value="SUV">
-</datalist>
-
-<datalist id="POVInsCo">
-  <option value="Allstate">
-  <option value="Farmers Insurance">
-  <option value="Geico">
-  <option value="The General">
-  <option value="Liberty Mutual">
-  <option value="Progressive">
-  <option value="State Farm">
-  <option value="USAA">
-</datalist>
-
-<datalist id="DLPTLanguage">
-  <option value="Arabic">
-  <option value="Chinese Mandarin">
-  <option value="Dutch">
-  <option value="Farsi">
-  <option value="French">
-  <option value="German">
-  <option value="Greek">
-  <option value="Hindi">
-  <option value="Italian">
-  <option value="Japanese">
-  <option value="Korean">
-  <option value="Pashto">
-  <option value="Persian">
-  <option value="Polish">
-  <option value="Russian">
-  <option value="Serbian">
-  <option value="Spanish">
-  <option value="Swedish">
-  <option value="Tagalog">
-  <option value="Turkish">
-  <option value="Urdu">
-</datalist>
-
-<datalist id="armyUnits">
-  <option value="Fort Jackson, SC">
-  <option value="Fort Leonard Wood, MO">
-  <option value="Fort Sill, OK">
-</datalist>
-
-<datalist id="usStates">
-  <option value="AL">
-  <option value="AK">
-  <option value="AS">
-  <option value="AZ">
-  <option value="AR">
-  <option value="CA">
-  <option value="CO">
-  <option value="CT">
-  <option value="DE">
-  <option value="DC">
-  <option value="FM">
-  <option value="FL">
-  <option value="GA">
-  <option value="GU">
-  <option value="HI">
-  <option value="ID">
-  <option value="IL">
-  <option value="IN">
-  <option value="IA">
-  <option value="KS">
-  <option value="KY">
-  <option value="LA">
-  <option value="ME">
-  <option value="MH">
-  <option value="MD">
-  <option value="MA">
-  <option value="MI">
-  <option value="MN">
-  <option value="MS">
-  <option value="MO">
-  <option value="MT">
-  <option value="NE">
-  <option value="NV">
-  <option value="NH">
-  <option value="NJ">
-  <option value="NM">
-  <option value="NY">
-  <option value="NC">
-  <option value="ND">
-  <option value="MP">
-  <option value="OH">
-  <option value="OK">
-  <option value="OR">
-  <option value="PW">
-  <option value="PA">
-  <option value="PR">
-  <option value="RI">
-  <option value="SC">
-  <option value="SD">
-  <option value="TN">
-  <option value="TX">
-  <option value="UT">
-  <option value="VT">
-  <option value="VI">
-  <option value="VA">
-  <option value="WA">
-  <option value="WV">
-  <option value="WI">
-  <option value="WY">
-</datalist><!-- US States -->
-
 </head>
 <body>
 <h1>Hold Company, 111th MI BDE</h1>
@@ -1111,8 +858,6 @@ border: solid 2px;
 <br>  try to copy the contents (copy to clipboard), 
 <br>  and send (paste) it in the body of the email.
 <br>
-<br>-Don't send a CSV file.
-<br>
 <br>-If you refresh the page, all of your information will be lost.
 <br> If you need to continue working on it, save your JSON and load it when ready to continue (then download it again when completed).
 <br>
@@ -1188,31 +933,6 @@ border: solid 2px;
 
 </fieldset>
 
-
-<br>
-<fieldset><details><summary>Do's & Don'ts</summary>
-<fieldset><legend>Do's</legend>
-<ul>
-    <li>You may go to the shoppette or order food after 1830 on duty days.</li>
-    <li>You may go to the post office or dry cleaners during the duty day with permission from the DS.</li>
-    <li>Keep a list of all the places (dates, address, supervisor, and a phone number) you have lived at since you joined the military (including BCT). You are going to need it later to renew your clearance.</li>
-</ul>
-</fieldset><!--Do-->
-<fieldset><legend>Don'ts</legend>
-<ul>
-    <li>Go anywhere without a battle buddy.</li>
-    <li>Throw away any Army issued item.</li>
-    <li>Wear shorts, skirts, etc. that are shorter than your PT shorts.</li>
-    <li>Wear tank tops outside the pool and maybe the gym.</li>
-    <li>If you receive a phone call asking for money, 
-    <br>unless you are 200% certain,
-    <br><b>DON'T</b> give your money!</li>
-    <br>If you owe money to the government, they'll take it and you'll see it in your LES.
-    <br>If you want to donate, it has to be for non-personal reasons, so most likely to a non-profit organization (Red Cross, AER, etc.).
-    <br>Army Emergency Relief (AER) Annual Campaign is conducted from March 1st through May 15th each year.
-</ul>
-</fieldset><!--Don't-->
-</details></fieldset><!--Do/Don't-->
 
 <br>
 <fieldset><details open><summary>Hold Company Info</summary>
@@ -1381,8 +1101,35 @@ RANK Last, First
 
 <br>
 </details></fieldset><!-- Hold Co info -->
-<br>
 
+
+<br>
+<fieldset><details open><summary>Do's & Don'ts</summary>
+<fieldset><legend>Do's</legend>
+<ul>
+    <li>You may go to the shoppette or order food after 1830 on duty days.</li>
+    <li>You may go to the post office or dry cleaners during the duty day with permission from the DS.</li>
+    <li>Keep a list of all the places (dates, address, supervisor, and a phone number) you have lived at since you joined the military (including BCT). You are going to need it later to renew your clearance.</li>
+</ul>
+</fieldset><!--Do-->
+<fieldset><legend>Don'ts</legend>
+<ul>
+    <li>Go anywhere without a battle buddy.</li>
+    <li>Throw away any Army issued item.</li>
+    <li>Wear shorts, skirts, etc. that are shorter than your PT shorts.</li>
+    <li>Wear tank tops outside the pool and maybe the gym.</li>
+    <li>If you receive a phone call asking for money, 
+    <br>unless you are 200% certain,
+    <br><b>DON'T</b> give your money!</li>
+    <br>If you owe money to the government, they'll take it and you'll see it in your LES.
+    <br>If you want to donate, it has to be for non-personal reasons, so most likely to a non-profit organization (Red Cross, AER, etc.).
+    <br>Army Emergency Relief (AER) Annual Campaign is conducted from March 1st through May 15th each year.
+</ul>
+</fieldset><!--Don't-->
+</details></fieldset><!--Do/Don't-->
+
+
+<br>
 <fieldset><details open><summary>PT</summary>
 
 <br><a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=1020967" target="_blank">ATP 7-22.02</a> - Exercises
@@ -2260,6 +2007,260 @@ RANK Last, First
   <br><br><label>Source code: </label><a href="https://github.com/jorgepr13/hold-co" target="_blank">https://github.com/jorgepr13/hold-co</a>
   </p>
 </footer>
+
+
+<datalist id="colorEye">
+  <option value="Brown">
+  <option value="Hazel">
+  <option value="Blue">
+  <option value="Green">
+</datalist>
+<datalist id="colorHair">
+  <option value="Brown">
+  <option value="Black">
+  <option value="Blonde">
+  <option value="Red">
+</datalist>
+<datalist id="colorVehicle">
+  <option value="Black">
+  <option value="Gray">
+  <option value="Silver">
+  <option value="White">
+  <option value="Red">
+  <option value="Blue">
+  <option value="Green">
+</datalist>
+<datalist id="MOS">
+  <option value="35F">
+  <option value="35G">
+  <option value="35L">
+  <option value="35M">
+  <option value="35T">
+  <option value="09L">
+</datalist>
+<datalist id="ABNRASP">
+  <option value="Contract">
+  <option value="Volunteer">
+  <option value="No">
+</datalist>
+<datalist id="DLI">
+  <option value="Pass">
+  <option value="Fail">
+  <option value="No">
+</datalist>
+<datalist id="YN">
+  <option value="Yes">
+  <option value="No">
+</datalist>
+<datalist id="Relationship">
+  <option value="Spouse">
+  <option value="Child">
+  <option value="Father">
+  <option value="Mother">
+  <option value="Step-Father">
+  <option value="Step-Mother">
+  <option value="Brother">
+  <option value="Sister">
+  <option value="Grandfather">
+  <option value="Grandmother">
+  <option value="Grandparent">
+  <option value="Uncle">
+  <option value="Aunt">
+  <option value="Cousin">
+  <option value="Friend">
+  <option value="Father-in-law">
+  <option value="Mother-in-law">
+  <option value="Brother-in-law">
+  <option value="Sister-in-law">
+  <option value="Fiance">
+  <option value="Boyfriend">
+  <option value="Girlfriend">
+</datalist>
+
+<datalist id="COVIDVacManu">
+  <option value="Moderna">
+  <option value="Pfizer">
+  <option value="Johnson & Johnson">
+</datalist>
+
+<datalist id="Religion">
+  <option value="None">
+  <option value="Christian">
+  <option value="Catholic">
+  <option value="Adventist">
+  <option value="Agnostic">
+  <option value="Atheist">
+  <option value="Baptist">
+  <option value="Buddhist">
+  <option value="Child of God">
+  <option value="Episcopal">
+  <option value="Hindu">
+  <option value="Islam">
+  <option value="Jewish">
+  <option value="Judaism">
+  <option value="LDS">
+  <option value="Lutheran">
+  <option value="Methodist">
+  <option value="Mormon">
+  <option value="Muslim">
+  <option value="Orthodox">
+  <option value="Eastern Orthodox">
+  <option value="Greek Orthodox">
+  <option value="Judaism Orthodox">
+  <option value="Pagan">
+  <option value="Pentecostal">
+  <option value="Presbyterian">
+  <option value="Protestant">
+  <option value="Wiccan">
+</datalist>
+
+<datalist id="Allergies">
+  <option value="None">
+  <option value="Amoxicillin">
+  <option value="Bees">
+  <option value="Eggs">
+  <option value="Fish">
+  <option value="Grass">
+  <option value="Latex">
+  <option value="Milk">
+  <option value="Mold">
+  <option value="Peanuts">
+  <option value="Penicillin">
+  <option value="Pollen">
+  <option value="Sesame">
+  <option value="Shellfish">
+  <option value="Soy">
+  <option value="Sulfa drugs">
+  <option value="Tree nut">
+  <option value="Turmeric">
+  <option value="Wasps">
+  <option value="Wheat">
+</datalist>
+
+<datalist id="MealPref">
+  <option value="No Preference">
+  <option value="Vegetarian">
+  <option value="Vegan">
+  <option value="No pork">
+  <option value="No red meat">
+  <option value="Pescatarian">
+  <option value="Kosher">
+  <option value="Halal">
+</datalist>
+
+<datalist id="POVType">
+  <option value="Coupe">
+  <option value="Hatchback">
+  <option value="Coupe">
+  <option value="Mini-Van">
+  <option value="Pickup">
+  <option value="Sedan">
+  <option value="SUV">
+</datalist>
+
+<datalist id="POVInsCo">
+  <option value="Allstate">
+  <option value="Farmers Insurance">
+  <option value="Geico">
+  <option value="The General">
+  <option value="Liberty Mutual">
+  <option value="Progressive">
+  <option value="State Farm">
+  <option value="USAA">
+</datalist>
+
+<datalist id="DLPTLanguage">
+  <option value="Arabic">
+  <option value="Chinese Mandarin">
+  <option value="Dutch">
+  <option value="Farsi">
+  <option value="French">
+  <option value="German">
+  <option value="Greek">
+  <option value="Hindi">
+  <option value="Italian">
+  <option value="Japanese">
+  <option value="Korean">
+  <option value="Pashto">
+  <option value="Persian">
+  <option value="Polish">
+  <option value="Russian">
+  <option value="Serbian">
+  <option value="Spanish">
+  <option value="Swedish">
+  <option value="Tagalog">
+  <option value="Turkish">
+  <option value="Urdu">
+</datalist>
+
+<datalist id="armyUnits">
+  <option value="Fort Jackson, SC">
+  <option value="Fort Leonard Wood, MO">
+  <option value="Fort Sill, OK">
+</datalist>
+
+<datalist id="usStates">
+  <option value="AL">
+  <option value="AK">
+  <option value="AS">
+  <option value="AZ">
+  <option value="AR">
+  <option value="CA">
+  <option value="CO">
+  <option value="CT">
+  <option value="DE">
+  <option value="DC">
+  <option value="FM">
+  <option value="FL">
+  <option value="GA">
+  <option value="GU">
+  <option value="HI">
+  <option value="ID">
+  <option value="IL">
+  <option value="IN">
+  <option value="IA">
+  <option value="KS">
+  <option value="KY">
+  <option value="LA">
+  <option value="ME">
+  <option value="MH">
+  <option value="MD">
+  <option value="MA">
+  <option value="MI">
+  <option value="MN">
+  <option value="MS">
+  <option value="MO">
+  <option value="MT">
+  <option value="NE">
+  <option value="NV">
+  <option value="NH">
+  <option value="NJ">
+  <option value="NM">
+  <option value="NY">
+  <option value="NC">
+  <option value="ND">
+  <option value="MP">
+  <option value="OH">
+  <option value="OK">
+  <option value="OR">
+  <option value="PW">
+  <option value="PA">
+  <option value="PR">
+  <option value="RI">
+  <option value="SC">
+  <option value="SD">
+  <option value="TN">
+  <option value="TX">
+  <option value="UT">
+  <option value="VT">
+  <option value="VI">
+  <option value="VA">
+  <option value="WA">
+  <option value="WV">
+  <option value="WI">
+  <option value="WY">
+</datalist><!-- US States -->
+
 
 <script type="text/javascript">
 //https://jorgepr13.github.io/hold-co/
