--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@ border: solid 2px;
   <label for="smNameMiddle">Middle Name:</label>
   <input type="text" id="smNameMiddle" autocomplete="on">
   <br>
-  <details><summary><label for="smSSN">SSN:</label>
-    <input type="text" id="smSSN" placeholder="123-12-1234">
+  <label for="smSSN">SSN:</label>
+  <input type="text" id="smSSN" placeholder="123-12-1234">
+  <details hidden><summary>
     </summary>
-    <p hidden>In order to (IOT) prevent you from sending sensitive PII, do not fill this field.
+    <p>In order to (IOT) prevent you from sending sensitive PII, do not fill this field.
         <br>We will get your SSN from your orders.</p>
     <details><summary>Personally Identifiable Information (PII)</summary>
     <p>Is any information about an individual which can be used to distinguish or trace an individual's identity such as name, Social Security Number (SSN), date and place of birth, mother's maiden name, and biometric records.</p>
