--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ border: solid 2px;
 <br>
 <fieldset><legend>Co Moto:</legend>
 Hold Co Moto: Ready and Forward
-<br>Hold Co Response: Always
+<br>Hold Co Response: Always!
 <br>
 <br>1st PLT (Ronins): Yellow pages!
 <br>2nd PLT (Berserkers): Berserkers!
@@ -1185,7 +1185,7 @@ RANK Last, First
 </details></fieldset><!-- Volunteer -->
 <br>
 
-<fieldset><details open><summary>Leave/Holiday Block Leave</summary>
+<fieldset><details><summary>Leave/Holiday Block Leave</summary>
 <br>
 <br>Dates: 20 DEC 2021 - 04 JAN 2022
 <br>Airport: TUS (Tucson International Airport)
