--- a/index.html
+++ b/index.html
@@ -1257,6 +1257,11 @@ RANK Last, First
 <br>most activities on post are driven by MWR, if you want to know what activities might be happening in and around post, visit their page.
 <br>
 <br><a href="https://www.facebook.com/groups/529117777235614" target="_blank">Fort Huachuca AIT Support Group</a>
+<br>
+
+<br><a href="https://www.facebook.com/fhcsc" target="_blank">Fort Huachuca Community Spouses Club Facebook page</a>
+<br><a href="https://www.fhcsc.com/" target="_blank">https://www.fhcsc.com</a> - Fort Huachuca Community Spouses Club
+<br>
 
 <br>
 <br><a href="https://drive.google.com/file/d/1_oMBOglspePR6XJ5SKqA86d-bIjLXnLL/view?usp=drivesdk" target="_blank">FH Regulation 600-50</a>
@@ -1265,10 +1270,38 @@ RANK Last, First
 
 
 <br>
-<br><a href="https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/" target="_blank">111th MI BDE Facebook page</a>
+<br><a href="https://www.facebook.com/USarmy" target="_blank"> U.S. Army Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/USArmyTRADOC" target="_blank">U.S. Army TRADOC Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/u.s.armyforthuachuca" target="_blank">U.S. Army Fort Huachuca Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/RWBAHC" target="_blank">Raymond W. Bliss Army Health Center (RWBAHC) Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/USAICoE.HQ" target="_blank">USAICoE Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/FHNCOAcademy" target="_blank">USAICoE NCO Academy Facebook page</a>
+<br>
+<br>
+<br><a href="https://www.facebook.com/111thMIBDE" target="_blank">111th MI BDE Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/304th-MI-BN-103135759040467" target="_blank">304th MI BN Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/Anvil-Company-304th-MI-BN-MICCC-100458354952351" target="_blank">A Co, 304th MI BN - MICCC Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/CharlieCo304thMIBN" target="_blank">C Co, 304th MI BN - MIBOLC Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/profile.php?id=100064530856716" target="_blank">305th MI BN Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/ACo305thMIBN" target="_blank">A Co, 305th MI BN Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/" target="_blank"> Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/" target="_blank"> Facebook page</a>
 <br>
 <br><a href="https://www.facebook.com/309THMIBN/" target="_blank">309th MI BN Facebook page</a>
-
+<br><a href="https://www.facebook.com/" target="_blank"> Facebook page</a>
+<br>
 <br>
 <br>
 <details><summary>35T</summary>
