--- a/index.html
+++ b/index.html
@@ -1285,29 +1285,37 @@ RANK Last, First
 <br>
 <br><a href="https://www.facebook.com/111thMIBDE" target="_blank">111th MI BDE Facebook page</a>
 <br>
+<br>
 <br><a href="https://www.facebook.com/304th-MI-BN-103135759040467" target="_blank">304th MI BN Facebook page</a>
 <br>
 <br><a href="https://www.facebook.com/Anvil-Company-304th-MI-BN-MICCC-100458354952351" target="_blank">A Co, 304th MI BN - MICCC Facebook page</a>
 <br>
 <br><a href="https://www.facebook.com/CharlieCo304thMIBN" target="_blank">C Co, 304th MI BN - MIBOLC Facebook page</a>
 <br>
+<br>
 <br><a href="https://www.facebook.com/profile.php?id=100064530856716" target="_blank">305th MI BN Facebook page</a>
 <br>
 <br><a href="https://www.facebook.com/ACo305thMIBN" target="_blank">A Co, 305th MI BN Facebook page</a>
 <br>
-<br><a href="https://www.facebook.com/" target="_blank"> Facebook page</a>
+<br><a href="https://www.facebook.com/BravoBigDogs" target="_blank">B Co, 305th MI BN Facebook page</a>
 <br>
-<br><a href="https://www.facebook.com/" target="_blank"> Facebook page</a>
+<br><a href="https://www.facebook.com/charliecompany305th" target="_blank">C Co, 305th MI BN Facebook page</a>
 <br>
-<br><a href="https://www.facebook.com/309THMIBN/" target="_blank">309th MI BN Facebook page</a>
-<br><a href="https://www.facebook.com/" target="_blank"> Facebook page</a>
 <br>
+<br><a href="https://www.facebook.com/309THMIBN" target="_blank">309th MI BN Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/apachecompany309th" target="_blank">A Co, 309th MI BN Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/profile.php?id=100064319966168" target="_blank">B Co, 309th MI BN Facebook page</a>
+<br>
+<br><a href="https://www.facebook.com/ComancheCompany309th" target="_blank">C Co, 309th MI BN Facebook page</a>
+<br>
+
 <br>
 <br>
 <details><summary>35T</summary>
 <label>CQ Phone: </label><a href="tel:520-533-6401">520-533-6401</a>
 <br><label>Co Email: </label><a href="mailto:charlie309th@gmail.com">charlie309th@gmail.com</a>
-<br><a href="https://www.facebook.com/ComancheCompany309th" target="_blank">C Co, 309th Facebook page</a>
 <br>
 <br><a hidden href="https://drive.google.com/file/d/1w2tOjSq-ifaubtxphW2Y-TXNfpfcR6o6/view?usp=sharing">35T OML - Class start roster</a>
 <br>
