--- a/index.html
+++ b/index.html
@@ -1284,6 +1284,8 @@ RANK Last, First
 <br>
 <br>
 <br><a href="https://www.facebook.com/111thMIBDE" target="_blank">111th MI BDE Facebook page</a>
+<br>111th MI BDE Motto: Mission First
+<br>111th MI BDE Response: Always!
 <br>
 <br>
 <br><a href="https://www.facebook.com/304th-MI-BN-103135759040467" target="_blank">304th MI BN Facebook page</a>
@@ -1319,10 +1321,10 @@ RANK Last, First
 <br>
 <br><a hidden href="https://drive.google.com/file/d/1w2tOjSq-ifaubtxphW2Y-TXNfpfcR6o6/view?usp=sharing">35T OML - Class start roster</a>
 <br>
-<br>309th BN Moto: Sentinels of Security
+<br>309th BN Motto: Sentinels of Security
 <br>309th BN Response: Sentinel Pride!
 <br>
-<br>C Co, 309th Moto: Maintain the Edge
+<br>C Co, 309th Motto: Maintain the Edge
 <br>C Co, 309th Response: Razor Sharp
 
 </details><!-- 35T -->
